# EssaGUI

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  run-all-tests.sh
Essa/Engine/: CMakeLists.txt
Essa/GUI/: Application.cpp  Application.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  HostWindow.cpp  HostWindow.hpp  Model.cpp  Model.hpp  NotifyUser.hpp  Overlay.hpp  Reactivity.hpp  Text.hpp  TextAlign.hpp  Theme.cpp  Theme.hpp  ThemeRenderer.cpp  ThemeRenderer.hpp  Timer.cpp  Timer.hpp  WidgetTreeRoot.cpp  WidgetTreeRoot.hpp  WindowRoot.cpp  WindowRoot.hpp
Essa/Geometry/: CMakeLists.txt  Distance.cpp  Distance.hpp  Intersection.cpp  Intersection.hpp  Line2D.cpp  Line2D.hpp  LineSegment2D.hpp
EssaEngine/: CMakeLists.txt
EssaEngine/3D/: CMakeLists.txt  Cube.cpp  Cube.hpp  Material.hpp  Model.cpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp  Object3D.cpp  Object3D.hpp  Shapes.cpp  Shapes.hpp  Sphere.cpp  Sphere.hpp
EssaGUI/: Application.cpp  Application.hpp  CMakeLists.txt  HostWindow.cpp  HostWindow.hpp  Model.cpp  Overlay.hpp  Theme.cpp  WidgetTreeRoot.cpp  WidgetTreeRoot.hpp
EssaGUI/EML/: AST.hpp  EMLResource.hpp  Lexer.cpp  Loader.cpp  Loader.hpp  Parser.cpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp
EssaGUI/GUI/: AbstractListView.hpp  Application.cpp  Application.hpp  ArrowButton.hpp  Border.hpp  Button.hpp  Canvas.cpp  Canvas.hpp  Checkbox.cpp  Checkbox.hpp  ColorPicker.cpp  ColorPicker.hpp  Console.cpp  Container.cpp  Container.hpp  ContextMenu.cpp  ContextMenu.hpp  Datebox.hpp  DraggableView2D.cpp  DraggableView2D.hpp  FileExplorer.cpp  FileExplorer.hpp  Grid.cpp  Grid.hpp  HostWindow.cpp  HostWindow.hpp  ImageButton.hpp  ImageWidget.cpp  ListView.cpp  Listbox.cpp  Listbox.hpp  MessageBox.cpp  Model.cpp  Overlay.hpp  Progressbar.cpp  Progressbar.hpp  Prompt.cpp  RadioButton.cpp  RadioButton.hpp  RadioGroup.hpp  (+28 more)
EssaGUI/Graphics/: ClipViewScope.cpp  ClipViewScope.hpp  DefaultGUIShader.hpp  GUIBuilder.hpp  Painter.cpp  Painter.hpp  ResourceManager.cpp  ResourceManager.hpp  RichText.cpp  Text.hpp  TextureAtlas.hpp  Window.hpp
EssaGUI/Overlays/: ContextMenu.cpp  ContextMenu.hpp  FileExplorer.cpp  FileExplorer.hpp  FilePrompt.cpp  FilePrompt.hpp  MessageBox.cpp  Prompt.cpp  ToolWindow.cpp  ToolWindow.hpp  Tooltip.cpp  Tooltip.hpp
EssaGUI/Sprites/: RectangleShape.cpp  RectangleShape.hpp  Sprite.cpp  Sprite.hpp
EssaGUI/Widgets/: AbstractListView.hpp  ArrowButton.hpp  Border.hpp  Button.hpp  Canvas.cpp  Canvas.hpp  Checkbox.cpp  Checkbox.hpp  ColorPicker.cpp  ColorPicker.hpp  Console.cpp  Container.cpp  Container.hpp  Datebox.cpp  Datebox.hpp  DraggableView2D.hpp  Frame.hpp  Grid.cpp  Grid.hpp  ImageButton.hpp  ImageWidget.hpp  ListView.cpp  ListView.hpp  Listbox.cpp  Listbox.hpp  Progressbar.cpp  Progressbar.hpp  RadioButton.cpp  RadioButton.hpp  RadioGroup.hpp  ScrollableWidget.cpp  ScrollableWidget.hpp  SelectWidget.cpp  SelectWidget.hpp  SettingsMenu.cpp  SettingsMenu.hpp  Slider.cpp  Slider.hpp  StateTextButton.hpp  StateTextButton.inl  (+18 more)
EssaGUI/eml/: AST.cpp  AST.hpp  EMLObject.cpp  EMLObject.hpp  EMLResource.cpp  EMLResource.hpp  Lexer.cpp  Lexer.hpp  Loader.hpp  Parser.cpp  Parser.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp
EssaGUI/gfx/: ClipViewScope.cpp  ClipViewScope.hpp  DefaultGUIShader.cpp  DefaultGUIShader.hpp  GUIBuilder.hpp  Painter.cpp  Painter.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  RichText.cpp  RichText.hpp  SFMLWindow.cpp  SFMLWindow.hpp  Text.cpp  Text.hpp  Vertex.hpp  Window.cpp  Window.hpp
EssaGUI/glwrapper/: Color.hpp  Vertex.hpp
EssaGUI/gui/: AbstractListView.hpp  Application.cpp  Application.hpp  ArrowButton.cpp  ArrowButton.hpp  Border.cpp  Border.hpp  Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  Checkbox.cpp  Checkbox.hpp  ColorPicker.cpp  ColorPicker.hpp  Console.cpp  Console.hpp  Container.cpp  Container.hpp  ContextMenu.cpp  ContextMenu.hpp  Datebox.cpp  Datebox.hpp  DraggableView2D.cpp  DraggableView2D.hpp  EventLoop.cpp  EventLoop.hpp  FileExplorer.cpp  FileExplorer.hpp  FilePrompt.cpp  FilePrompt.hpp  Frame.cpp  Frame.hpp  Grid.cpp  Grid.hpp  HostWindow.cpp  HostWindow.hpp  ImageButton.cpp  ImageButton.hpp  ImageWidget.cpp  (+60 more)
EssaGUI/util/: BHTree.hpp  ConfigFile.cpp  ConfigFile.hpp  Matrix.hpp  SimulationClock.cpp  SimulationClock.hpp  UnitDisplay.cpp  Units.hpp  Vector3.hpp
EssaUtil/: Angle.hpp  Any.hpp  ArgParser.cpp  ArgParser.hpp  Base64.cpp  Base64.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CharacterType.hpp  Checked.hpp  Clock.hpp  Color.cpp  Color.hpp  ColorScale.hpp  Config.cpp  Config.hpp  Constants.hpp  CoordinateSystem.hpp  CppSourceLocation.hpp  DelayedInit.hpp  DisplayError.cpp  DisplayError.hpp  DynamicArray2D.hpp  Endianness.hpp  Enum.hpp  Error.hpp  ErrorMappers.hpp  GenericParser.hpp  Is.hpp  Json.hpp  Length.hpp  Matrix.hpp  MultidimensionalArray.hpp  MyVariant.hpp  NonCopyable.hpp  Orientation.hpp  Ptr.hpp  Random.hpp  Rect.hpp  (+17 more)
EssaUtil/CoordinateSystem/: Coordinates.hpp  GeoCoords.cpp  GeoCoords.hpp  Interoperability.hpp  Point.hpp  Size.hpp  Vector.hpp
EssaUtil/Math/: Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp
EssaUtil/Stream/: File.cpp  File.hpp  MemoryStream.cpp  MemoryStream.hpp  Reader.cpp  Reader.hpp  StandardStreams.cpp  StandardStreams.hpp  Stream.hpp  Writer.cpp  Writer.hpp
EssaUtil/Tests/: CMakeLists.txt  ColorScale.cpp  CoordinateSystem.cpp  DynamicArray2D.cpp  Error.cpp  GenericParser.cpp  Matrix.cpp  RAIIUtils.cpp  ScopeGuard.cpp  Stream.cpp  Threading.cpp  UString.cpp  UnitDisplay.cpp  Vector.cpp
EssaUtil/Threading/: ThreadPool.hpp
LLGL/: CMakeLists.txt
LLGL/3D/: CMakeLists.txt  Cube.cpp  Cube.hpp  ObjLoader.cpp  ObjLoader.hpp  Object3D.cpp  Object3D.hpp  Shapes.cpp  Shapes.hpp  Sphere.cpp  (+1 more)
examples/: CMakeLists.txt  checkboxes.cpp  file-explorer.cpp  gfx-test.cpp  image-widget.cpp  listboxes.cpp  message-box-multiline.cpp  progressbars.cpp  radiobuttons.cpp  scrollable-widget.cpp  test_ini.ini  text-editor.cpp  theme-ini.cpp
(+523 files in other folders)
