function(add_llgl_library TARGET_NAME LIB_NAME)
    add_library(${TARGET_NAME} ${SOURCES})
    add_library(LLGL::${TARGET_NAME} ALIAS ${TARGET_NAME})
    set_target_properties(${TARGET_NAME} PROPERTIES OUTPUT_NAME "llgl-${LIB_NAME}")
    essautil_setup_target(${TARGET_NAME})
    install(TARGETS ${TARGET_NAME} EXPORT EssaGUI DESTINATION lib)
endfunction()

add_subdirectory(3D)
add_subdirectory(Core)
add_subdirectory(EventLoop)
add_subdirectory(OpenGL)
add_subdirectory(Renderer)
add_subdirectory(Resources)
add_subdirectory(Window)
