function(add_llgl_library TARGET_NAME LIB_NAME)
    add_library(LLGL-${TARGET_NAME} SHARED ${SOURCES})
    add_library(EssaGUI::LLGL-${TARGET_NAME} ALIAS LLGL-${TARGET_NAME})
    set_target_properties(LLGL-${TARGET_NAME} PROPERTIES OUTPUT_NAME "llgl-${LIB_NAME}")
    essautil_setup_target(LLGL-${TARGET_NAME})
    install(TARGETS LLGL-${TARGET_NAME} EXPORT EssaGUI DESTINATION lib)
endfunction()

add_subdirectory(Core)
add_subdirectory(OpenGL)
add_subdirectory(Resources)
add_subdirectory(Window)
