function(add_example filename)
    string(REPLACE "/" "-" targetname "${filename}")
    add_executable(${targetname} ${filename}.cpp)
    target_link_libraries(${targetname} EssaGUI)
endfunction()

add_example("essa-gui/canvas")
add_example("essa-gui/checkboxes")
add_example("essa-gui/file-explorer")
add_example("essa-gui/gfx-test")
add_example("essa-gui/image-widget")
add_example("essa-gui/listboxes")
add_example("essa-gui/message-box-multiline")
add_example("essa-gui/progressbars")
add_example("essa-gui/radiobuttons")
add_example("essa-gui/scrollable-widget")
add_example("essa-gui/text-editor")
add_example("essa-gui/theme-ini")

add_example("llgl/CoreRenderer")
add_example("llgl/Oscilloscope")
add_example("llgl/SimpleRenderer")

add_example("essa-engine/ObjLoader")
target_link_libraries(essa-engine-ObjLoader EssaEngine-3D)
add_example("essa-engine/Shapes")
target_link_libraries(essa-engine-Shapes EssaEngine-3D)
