function(add_example filename)
    string(REPLACE "/" "-" targetname "${filename}")
    add_executable(${targetname} ${filename}.cpp)
    target_link_libraries(${targetname} EssaGUI)
    essautil_setup_target(${targetname})
endfunction()

add_example("essa-gui/arrow-buttons")
add_example("essa-gui/basic-layout")
add_example("essa-gui/canvas")
add_example("essa-gui/checkboxes")
add_example("essa-gui/color-picker")
add_example("essa-gui/eml")
add_example("essa-gui/file-explorer")
add_example("essa-gui/gfx-test")
add_example("essa-gui/grids")
add_example("essa-gui/image-widget")
add_example("essa-gui/listboxes")
add_example("essa-gui/message-box-multiline")
add_example("essa-gui/multiple-windows")
add_example("essa-gui/progressbars")
add_example("essa-gui/radiobuttons")
add_example("essa-gui/scrollable-widget")
add_example("essa-gui/text-editor")
add_example("essa-gui/theme-ini")
add_example("essa-gui/tooltips")
add_example("essa-gui/tree-view")
add_example("essa-gui/gui-builder")

add_example("llgl/experimental-shadergen")

add_example("essa-engine/obj-loader")
target_link_libraries(essa-engine-obj-loader EssaEngine-3D)
add_example("essa-engine/obj-loader-resource-manager")
target_link_libraries(essa-engine-obj-loader-resource-manager EssaEngine-3D)
add_example("essa-engine/oscilloscope")
target_link_libraries(essa-engine-oscilloscope EssaEngine-3D)
add_example("essa-engine/shapes")
target_link_libraries(essa-engine-shapes EssaEngine-3D)
