function(add_example filename)
    string(REPLACE "/" "-" targetname "${filename}")
    add_executable(${targetname} ${filename}.cpp)
    target_link_libraries(${targetname} GUI)
    essautil_setup_target(${targetname})
endfunction()

add_example("essa-gui/arrow-buttons")
add_example("essa-gui/basic-layout")
add_example("essa-gui/canvas")
add_example("essa-gui/checkboxes")
add_example("essa-gui/color-picker")
add_example("essa-gui/draggable-view")
add_example("essa-gui/eml")
add_example("essa-gui/file-explorer")
add_example("essa-gui/gfx-test")
add_example("essa-gui/grids")
add_example("essa-gui/heighway")
add_example("essa-gui/image-widget")
add_example("essa-gui/listboxes")
add_example("essa-gui/message-box-multiline")
add_example("essa-gui/multiple-windows")
add_example("essa-gui/passthrough")
target_link_libraries(essa-gui-passthrough X11)
add_example("essa-gui/progressbars")
add_example("essa-gui/radiobuttons")
add_example("essa-gui/rich-text")
add_example("essa-gui/scrollable-container")
add_example("essa-gui/scrollable-widget")
add_example("essa-gui/simple-app")
add_example("essa-gui/text-editor")
add_example("essa-gui/theme-ini")
add_example("essa-gui/tooltips")
add_example("essa-gui/tree-view")

add_example("llgl/experimental-shadergen")

add_example("essa-engine/model-benchmark")
target_link_libraries(essa-engine-model-benchmark Engine-3D)
add_example("essa-engine/multiple-materials")
target_link_libraries(essa-engine-multiple-materials Engine-3D)
add_example("essa-engine/obj-loader")
target_link_libraries(essa-engine-obj-loader Engine-3D)
add_example("essa-engine/obj-loader-resource-manager")
target_link_libraries(essa-engine-obj-loader-resource-manager Engine-3D)
add_example("essa-engine/oscilloscope")
target_link_libraries(essa-engine-oscilloscope Engine-3D)
add_example("essa-engine/shapes")
target_link_libraries(essa-engine-shapes Engine-3D)
